Refactor de modelos generados con OpenAPI
